# ChangeLog for sci-mathematics/sage-data-graphs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-data-graphs-20120404.ebuild:
  remove now unused ebuild

  26 Jan 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-data-graphs-20130920.ebuild:
  install all files in sage-data-graphs

*sage-data-graphs-20130920 (26 Jan 2015)

  26 Jan 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-data-graphs-20130920.ebuild:
  bump for sage 6.5

  14 Aug 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-data-graphs-20120404.ebuild:
  correct mirror

*sage-data-graphs-20120404 (13 Aug 2014)

  13 Aug 2014; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-data-graphs-20120404.ebuild, -sage-data-graphs-20120404_p4.ebuild:
  Move to new sage-upstream repo, sorry for the downgrade.

  22 Jan 2013; Christopher Schwan <cschwan@students.uni-mainz.de>
  sage-data-graphs-20120404_p4.ebuild:
  Migrate to sagemath mirror

  21 Nov 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  -sage-data-graphs-20070722_p2.ebuild, -sage-data-graphs-20120404_p3.ebuild:
  purge old

*sage-data-graphs-20120404_p4 (02 Oct 2012)

  02 Oct 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-data-graphs-20120404_p4.ebuild:
  bump for 5.4

  24 Jun 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-data-graphs-20120404_p3.ebuild:
  update source and manifest

*sage-data-graphs-20120404_p3 (17 Jun 2012)

  17 Jun 2012; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-data-graphs-20120404_p3.ebuild:
  add new graph package for sage-5.1

  31 May 2012; Christopher Schwan <cschwan@students.uni-mainz.de>
  -sage-data-graphs-20070722_p1-r1.ebuild, sage-data-graphs-20070722_p2.ebuild:
  Fix SRC_URI, remove old

*sage-data-graphs-20070722_p2 (26 Mar 2012)
