@@ -28,7 +28,6 @@ dev-python/mistune
 ~dev-python/ipython-3.0.0::sage-on-gentoo
 ~dev-python/matplotlib-1.3.1
 dev-python/mpmath
-dev-python/networkx
 ~dev-python/numpy-1.8.1
 ~dev-python/numpy-1.8.2
 ~dev-python/sage-pexpect-2.0
