@@ -26,7 +26,6 @@ dev-python/terminado
 dev-python/mistune
 ~dev-python/ipython-3.1.0::sage-on-gentoo
 dev-python/mpmath
-dev-python/networkx
 ~dev-python/numpy-1.8.2
 ~dev-python/sage-pexpect-2.0
 dev-python/pandas
