@@ -27,7 +27,6 @@ dev-python/mistune
 ~dev-python/ipython-3.1.0::sage-on-gentoo
 ~dev-python/ipython-3.2.1
 dev-python/mpmath
-dev-python/networkx
 ~dev-python/pexpect-3.3::sage-on-gentoo
 dev-python/pandas
 dev-python/pyasn1-modules
