@@ -26,7 +26,6 @@ dev-python/terminado
 dev-python/mistune
 ~dev-python/ipython-3.2.1
 dev-python/mpmath
-dev-python/networkx
 ~dev-python/pexpect-3.3::sage-on-gentoo
 dev-python/pandas
 dev-python/pyasn1-modules
@@ -96,7 +95,7 @@ sci-mathematics/rw
 ~sci-mathematics/sage-data-conway_polynomials-0.4
 ~sci-mathematics/sage-data-combinatorial_designs-20140630
 ~sci-mathematics/sage-data-elliptic_curves-0.8
-~sci-mathematics/sage-data-graphs-20130920
+~sci-mathematics/sage-data-graphs-20150724
 ~sci-mathematics/sage-data-polytopes_db-20120220
 >=sci-mathematics/sage-notebook-0.11.4-r3
 ~sci-mathematics/singular-3.1.7_p1
