@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sage-data-graphs-20150724 (06 Aug 2015)
+
+  06 Aug 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +sage-data-graphs-20150724.ebuild:
+  New graphs package for sage 6.9+
+
   09 Jun 2015; François Bissey <francois.bissey@canterbury.ac.nz>
   -sage-data-graphs-20120404.ebuild:
   remove now unused ebuild
